update: sq correction script

--- a/Notebooks/enrol_cohort_reassignment.ipynb
+++ b/Notebooks/enrol_cohort_reassignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "b697a29c",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import os\n",
     "import pytz\n",
     "os.environ[\"DJANGO_ALLOW_ASYNC_UNSAFE\"] = \"true\"\n",
-    "from cacheops import invalidate_all\n",
+    "# from cacheops import invalidate_all\n",
     "from django.apps import apps as django_apps\n",
     "from flourish_caregiver.helper_classes.utils import cohort_assigned\n",
     "from flourish_caregiver.helper_classes import SequentialCohortEnrollment\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "6fd21821",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "9c747e9d",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "4cda1fe7",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "a002bac1",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "f1bab738",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "de284b12",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "7cc5a3af",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
+   "id": "a80489c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cohort_ages = {'cohort_b': 7, 'cohort_c': 12}\n",
+    "def enrol_fu_schedule(child_age, cohort, schedule_dict, subject_identifier, child_sidx,\n",
+    "                      appointment_cls, is_caregiver=False, child_count=None):\n",
+    "    onschedule_datetime = None\n",
+    "    age_fu = cohort_ages.get(cohort, child_age)\n",
+    "    if child_age < age_fu:\n",
+    "        age_diff = round(age_fu - child_age, 2)\n",
+    "        age_in_months = round(age_diff * 12)\n",
+    "        onschedule_datetime = get_utcnow() + relativedelta(months=age_in_months)\n",
+    "    else:\n",
+    "        onschedule_datetime = get_utcnow() + relativedelta(months=6)\n",
+    "\n",
+    "    if onschedule_datetime:\n",
+    "        onschedule_model, schedule_name = put_onschedule(\n",
+    "            cohort, 'followup', schedule_dict, onschedule_datetime,\n",
+    "            subject_identifier, appointment_cls, is_caregiver=is_caregiver, child_count=str(child_count))\n",
+    "\n",
+    "        if is_caregiver:\n",
+    "            update_onschedule_model(subject_identifier, child_sidx,\n",
+    "                                    onschedule_model, schedule_name, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f490a3c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# child_identifiers=['B142-040990096-5-25', 'B142-040990096-5-35']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "197f73bf",
    "metadata": {},
    "outputs": [
@@ -371,14 +410,14 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|          | 0/291 [00:00<?, ?it/s]"
+      "  0%|          | 0/2 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start C142-040990124-5-10\n"
+      "start B142-040990096-5-25\n"
      ]
     },
     {
@@ -386,249 +425,41 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|          | 1/291 [00:00<01:28,  3.29it/s]"
+      " 50%|█████     | 1/2 [00:10<00:10, 10.45s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done C142-040990124-5-10\n",
-      "start B142-040990752-3-10\n"
+      "done B142-040990096-5-25\n",
+      "start B142-040990096-5-35\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  1%|          | 2/291 [00:00<01:21,  3.56it/s]"
+      "100%|██████████| 2/2 [00:19<00:00,  9.55s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done B142-040990752-3-10\n",
-      "start B142-040990315-9-10\n"
+      "done B142-040990096-5-35\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  1%|          | 3/291 [00:01<01:49,  2.62it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990315-9-10\n",
-      "start B142-040990186-4-10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  1%|▏         | 4/291 [00:01<01:39,  2.89it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990186-4-10\n",
-      "start B142-040990359-7-10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  2%|▏         | 5/291 [00:01<01:26,  3.32it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990359-7-10\n",
-      "start B142-040990035-3-10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  3%|▎         | 8/291 [00:03<01:52,  2.51it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990035-3-10\n",
-      "start B142-040990549-3-10\n",
-      "done B142-040990549-3-10\n",
-      "start B142-040990649-1-10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  3%|▎         | 9/291 [00:03<02:32,  1.84it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990649-1-10\n",
-      "start B142-040990453-8-10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  3%|▎         | 10/291 [00:05<03:12,  1.46it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990453-8-10\n",
-      "start B142-040990173-2-10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  4%|▍         | 11/291 [00:06<03:44,  1.25it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990173-2-10\n",
-      "start B142-040990371-2-10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  4%|▍         | 12/291 [00:07<04:02,  1.15it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990371-2-10\n",
-      "start B142-040990065-0-35\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  4%|▍         | 13/291 [00:08<04:18,  1.07it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990065-0-35\n",
-      "start B142-040990163-3-10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  5%|▍         | 14/291 [00:09<04:31,  1.02it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990163-3-10\n",
-      "start B142-040990626-9-25\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  5%|▌         | 16/291 [00:10<03:26,  1.33it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990626-9-25\n",
-      "start B142-040990081-7-10\n",
-      "done B142-040990081-7-10\n",
-      "start B142-040990566-7-10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  6%|▌         | 17/291 [00:11<03:45,  1.21it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done B142-040990566-7-10\n",
-      "start B142-040990296-1-35\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  6%|▌         | 17/291 [00:11<03:10,  1.44it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'None'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-16e735b53123>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0mcurrent_cohort\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mschedule_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcaregiver_schedule_dict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0monschedule_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0monschedule_datetime\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m         caregiver_subject_identifier, Appointment, is_caregiver=True, child_count=str(child_count))\n\u001b[0m\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;31m# Update child subject identifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-8-8bb8aa5e4a1f>\u001b[0m in \u001b[0;36mput_onschedule\u001b[0;34m(cohort, schedule_type, schedule_dict, onschedule_datetime, subject_identifier, appointment_cls, is_caregiver, child_count)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0monschedule_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mschedule_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcohort\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mschedule_type\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'onschedule_model'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mis_caregiver\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mschedule_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcaregiver_schedule_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcohort\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mschedule_type\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mchild_count\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mschedule_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mschedule_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcohort\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mschedule_type\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'None'"
+      "\n"
      ]
     }
    ],
    "source": [
-    "from cacheops import invalidate_model\n",
+    "# from cacheops import invalidate_model\n",
     "\"\"\"\n",
     "    Take participant offschedule for enrolment cohort and put onschedule for subsequent cohort schedule\n",
     "    1. Create a cohort instance for `current cohort`,\n",
@@ -649,13 +480,18 @@
     "\n",
     "    caregiver_subject_identifier = childconsent_obj.subject_consent.subject_identifier\n",
     "    if (current_cohort and enrol_cohort != current_cohort and current_cohort != f'{enrol_cohort}_sec'):\n",
-    "        if idx in ['B142-040990120-3-10', 'B142-040990263-1-10', 'B142-040990311-8-10',\n",
-    "                   'B142-040990341-5-10', 'B142-040990466-0-10', 'B142-040990612-9-60',\n",
-    "                   'B142-040990666-5-60', 'B142-040990755-6-10', 'B142-040990943-8-10',\n",
-    "                   'C142-040990599-8-10']:\n",
+    "        if idx in ['B142-040990120-3-10', 'B142-040990263-1-10', 'B142-040990341-5-10',\n",
+    "                   'B142-040990466-0-10', 'B142-040990612-9-60', 'B142-040990666-5-60',\n",
+    "                   'B142-040990755-6-10', 'B142-040990943-8-10', 'C142-040990599-8-10',\n",
+    "                   'B142-040990528-7-60']:\n",
+    "            continue\n",
+    "        if not bool(SubjectScheduleHistory.objects.onschedules(subject_identifier=idx)):\n",
     "            continue\n",
     "\n",
     "        print('start', idx)\n",
+    "        child_age = age(childconsent_obj.child_dob, get_utcnow().date())\n",
+    "        child_age = (child_age.years + (child_age.months/12))\n",
+    "\n",
     "        obj, created = Cohort.objects.get_or_create(\n",
     "            subject_identifier=idx,\n",
     "            name=current_cohort,\n",
@@ -671,11 +507,11 @@
     "                       onschedule_obj.onschedule_datetime,\n",
     "                       idx, ChildAppointment, )\n",
     "\n",
-    "        # Put onschedule for followup 6 months after sequential enrolment\n",
-    "        if 'follow' in schedule_type:\n",
-    "            onschedule_datetime = get_utcnow() + relativedelta(months=6)\n",
-    "            put_onschedule(current_cohort, 'followup', child_schedule_dict,\n",
-    "                           onschedule_datetime, idx, ChildAppointment)\n",
+    "        # Put child onschedule for followup\n",
+    "        if '_sec' not in current_cohort:\n",
+    "            enrol_fu_schedule(\n",
+    "                child_age, current_cohort, child_schedule_dict, idx, idx,\n",
+    "                ChildAppointment, is_caregiver=False, child_count=None)\n",
     "\n",
     "        # Take caregiver offschedule\n",
     "        onschedule_obj = get_onschedule_obj(caregiver_subject_identifier, enrol_cohort)\n",
@@ -693,18 +529,27 @@
     "        update_onschedule_model(caregiver_subject_identifier, idx,\n",
     "                                onschedule_model, schedule_name, )\n",
     "\n",
-    "        # Put onschedule for followup 6 months after sequential enrolment\n",
-    "        if 'follow' in schedule_type:\n",
-    "            onschedule_datetime = get_utcnow() + relativedelta(months=6)\n",
-    "            onschedule_model, schedule_name = put_onschedule(\n",
-    "                current_cohort, 'followup', caregiver_schedule_dict,\n",
-    "                onschedule_datetime, caregiver_subject_identifier, Appointment, is_caregiver=True, child_count=str(child_count))\n",
+    "        # Put caregiver onschedule for followup\n",
+    "        if '_sec' not in current_cohort:\n",
+    "            enrol_fu_schedule(\n",
+    "                child_age, current_cohort, caregiver_schedule_dict, caregiver_subject_identifier, idx,\n",
+    "                Appointment, is_caregiver=True, child_count=str(child_count))\n",
     "\n",
-    "            update_onschedule_model(caregiver_subject_identifier, idx,\n",
-    "                                    onschedule_model, schedule_name, )\n",
     "        print('done', idx)\n",
-    "        invalidate_model(Cohort)\n",
-    "        invalidate_all()"
+    "#         invalidate_model(Cohort)\n",
+    "#         invalidate_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6377d58c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cohorts = Cohort.objects.filter(subject_identifier__in=child_identifiers)\n",
+    "for cohort in cohorts:\n",
+    "    cohort.save()"
    ]
   },
   {
