update cohort objects after c enrol

--- a/Notebooks/96_5_enrol_cohort_c_ticket7276.ipynb
+++ b/Notebooks/96_5_enrol_cohort_c_ticket7276.ipynb
@@ -420,8 +420,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "87e9b26f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_state': <django.db.models.base.ModelState object at 0x169eb0e48>, 'created': datetime.datetime(2023, 10, 16, 10, 39, 7, 974609, tzinfo=<UTC>), 'modified': datetime.datetime(2023, 11, 1, 10, 13, 25, 747265, tzinfo=<UTC>), 'user_created': 'amediphoko', 'user_modified': 'amediphoko', 'hostname_created': 'flourish-dev', 'hostname_modified': 'Ame-MacBook-Pro-M2.local', 'revision': '', 'device_created': '99', 'device_modified': '99', 'id': UUID('2a496132-99ef-4173-a6af-b709f29a730b'), 'site_id': 40, 'subject_identifier': 'B142-040990096-5-25', 'slug': 'b142-040990096-5-25', 'name': 'cohort_b', 'assign_datetime': datetime.datetime(2021, 6, 22, 13, 17, tzinfo=<UTC>), 'enrollment_cohort': True, 'current_cohort': False, 'exposure_status': 'UNEXPOSED'}\n",
+      "{'_state': <django.db.models.base.ModelState object at 0x169e62108>, 'created': datetime.datetime(2023, 11, 1, 10, 13, 25, 628312, tzinfo=<UTC>), 'modified': datetime.datetime(2023, 11, 1, 10, 13, 25, 791601, tzinfo=<UTC>), 'user_created': 'amediphoko', 'user_modified': 'amediphoko', 'hostname_created': 'Ame-MacBook-Pro-M2.local', 'hostname_modified': 'Ame-MacBook-Pro-M2.local', 'revision': '', 'device_created': '99', 'device_modified': '99', 'id': UUID('b49f6c07-d8f4-45e2-aa9c-a25ca5b377a5'), 'site_id': 40, 'subject_identifier': 'B142-040990096-5-25', 'slug': 'b142-040990096-5-25', 'name': 'cohort_c', 'assign_datetime': datetime.datetime(2023, 2, 28, 6, 2, 54, 778272, tzinfo=<UTC>), 'enrollment_cohort': False, 'current_cohort': True, 'exposure_status': 'UNEXPOSED'}\n",
+      "{'_state': <django.db.models.base.ModelState object at 0x169e55988>, 'created': datetime.datetime(2023, 10, 16, 10, 39, 8, 121578, tzinfo=<UTC>), 'modified': datetime.datetime(2023, 11, 1, 10, 13, 25, 837864, tzinfo=<UTC>), 'user_created': 'amediphoko', 'user_modified': 'amediphoko', 'hostname_created': 'flourish-dev', 'hostname_modified': 'Ame-MacBook-Pro-M2.local', 'revision': '', 'device_created': '99', 'device_modified': '99', 'id': UUID('b50fd5eb-c99e-4971-a70b-f31edfc119a8'), 'site_id': 40, 'subject_identifier': 'B142-040990096-5-35', 'slug': 'b142-040990096-5-35', 'name': 'cohort_b', 'assign_datetime': datetime.datetime(2021, 6, 22, 13, 19, tzinfo=<UTC>), 'enrollment_cohort': True, 'current_cohort': False, 'exposure_status': 'UNEXPOSED'}\n",
+      "{'_state': <django.db.models.base.ModelState object at 0x169e69a48>, 'created': datetime.datetime(2023, 11, 1, 10, 13, 25, 699884, tzinfo=<UTC>), 'modified': datetime.datetime(2023, 11, 1, 10, 13, 25, 883933, tzinfo=<UTC>), 'user_created': 'amediphoko', 'user_modified': 'amediphoko', 'hostname_created': 'Ame-MacBook-Pro-M2.local', 'hostname_modified': 'Ame-MacBook-Pro-M2.local', 'revision': '', 'device_created': '99', 'device_modified': '99', 'id': UUID('92c1e7b3-b513-41cc-81f8-6f887f58a627'), 'site_id': 40, 'subject_identifier': 'B142-040990096-5-35', 'slug': 'b142-040990096-5-35', 'name': 'cohort_c', 'assign_datetime': datetime.datetime(2023, 2, 28, 6, 2, 54, 778272, tzinfo=<UTC>), 'enrollment_cohort': False, 'current_cohort': True, 'exposure_status': 'UNEXPOSED'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in child_sidxs:\n",
+    "    Cohort.objects.get_or_create(\n",
+    "        subject_identifier=idx,\n",
+    "        name='cohort_c',\n",
+    "        defaults={'assign_datetime': onschedule_datetime,})\n",
+    "cohorts = Cohort.objects.filter(subject_identifier__in=child_sidxs)\n",
+    "for cohort in cohorts:\n",
+    "    print(cohort.__dict__)\n",
+    "    cohort.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfcd194d",
    "metadata": {},
    "outputs": [],
    "source": []
