Refactor the data_fix

--- a/flourish/notebooks/data_fix_birthfeeding_and_vaccines.ipynb
+++ b/flourish/notebooks/data_fix_birthfeeding_and_vaccines.ipynb
@@ -35,7 +35,7 @@
     "choice = 'used_infant_dob'\n",
     "birth_feeding_vaccines = BirthFeedingVaccine.objects.all()\n",
     "\n",
-    "error_info = {'subject_identifier': [], 'report_datetime': [], 'visit_code': [], 'visit_report_datetime': []}\n",
+    "error_in_report_datetime = {'subject_identifier': [], 'report_datetime': [], 'visit_code': [], 'visit_report_datetime': []}\n",
     "\n",
     "for birth_feeding_vaccine in birth_feeding_vaccines:\n",
     "   try:\n",
@@ -43,15 +43,17 @@
     "         birth_feeding_vaccine.breastfeed_start_est = choice\n",
     "      birth_feeding_vaccine.save()\n",
     "   except CrfReportDateAllowanceError as e:\n",
+    "      error_in_report_datetime['subject_identifier'].append(birth_feeding_vaccine.visit.subject_identifier)\n",
+    "      error_in_report_datetime['report_datetime'].append(birth_feeding_vaccine.report_datetime)\n",
+    "      error_in_report_datetime['visit_code'].append(birth_feeding_vaccine.visit.visit_code)\n",
+    "      error_in_report_datetime['visit_report_datetime'].append(birth_feeding_vaccine.visit.report_datetime)\n",
+    "\n",
     "      birth_feeding_vaccine.report_datetime = birth_feeding_vaccine.visit.report_datetime\n",
     "      birth_feeding_vaccine.save()\n",
-    "      error_info['subject_identifier'].append(birth_feeding_vaccine.visit.subject_identifier)\n",
-    "      error_info['report_datetime'].append(birth_feeding_vaccine.report_datetime)\n",
-    "      error_info['visit_code'].append(birth_feeding_vaccine.visit.visit_code)\n",
-    "      error_info['visit_report_datetime'].append(birth_feeding_vaccine.visit.report_datetime)\n",
+    "      \n",
     "\n",
     "      # Define the file name\n",
-    "      file_name = 'error_info.csv'\n",
+    "      file_name = 'error_in_report_datetime.csv'\n",
     "\n",
     "      # Open the CSV file in write mode\n",
     "      with open(file_name, 'w', newline='') as csv_file:\n",
@@ -62,12 +64,12 @@
     "         csv_writer.writerow(['subject_identifier', 'report_datetime', 'visit_code', 'visit_report_datetime'])\n",
     "         \n",
     "         # Iterate through the error_info dictionary and write each row\n",
-    "         for i in range(len(error_info['subject_identifier'])):\n",
+    "         for i in range(len(error_in_report_datetime['subject_identifier'])):\n",
     "            csv_writer.writerow([\n",
-    "                  error_info['subject_identifier'][i],\n",
-    "                  error_info['report_datetime'][i],\n",
-    "                  error_info['visit_code'][i],\n",
-    "                  error_info['visit_report_datetime'][i],\n",
+    "                  error_in_report_datetime['subject_identifier'][i],\n",
+    "                  error_in_report_datetime['report_datetime'][i],\n",
+    "                  error_in_report_datetime['visit_code'][i],\n",
+    "                  error_in_report_datetime['visit_report_datetime'][i],\n",
     "            ])\n",
     "      \n",
     "\n",
