Optimize consent checks in child's screenings
Improve conditional checks for the existence of a consent and its relations. The original condition only checks if the consent exists, updated one additionally checks that related entities do not exist as well. This aligns with the new research protocol requirements and more accurately reflects the consent's state.

--- a/Notebooks/screenings_to_inline.ipynb
+++ b/Notebooks/screenings_to_inline.ipynb
@@ -235,7 +235,7 @@
     "    except CaregiverChildConsent.DoesNotExist:\n",
     "        pass\n",
     "    else:\n",
-    "        if consent :\n",
+    "        if consent and not consent.study_child_identifier:\n",
     "            child_subject_identifier = consent.subject_identifier\n",
     "\n",
     "    options = {\n",
