--- a/Notebooks/update_notebooks.ipynb
+++ b/Notebooks/update_notebooks.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-02T07:54:48.982864Z",
-     "start_time": "2023-11-02T07:54:35.395169Z"
+     "end_time": "2023-11-30T13:57:01.203138Z",
+     "start_time": "2023-11-30T13:56:42.202931Z"
     }
    },
    "outputs": [
@@ -67,12 +67,14 @@
       " * flourish_caregiver.subjectconsent 1 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * flourish_caregiver.subjectconsent 2 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * flourish_caregiver.subjectconsent 3 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
+      " * flourish_caregiver.subjectconsent 4 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * flourish_caregiver.tbadolconsent 1 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * flourish_caregiver.tbinformedconsent 1 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * flourish_child.childdummysubjectconsent 1 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * flourish_child.childdummysubjectconsent 2 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * flourish_child.childdummysubjectconsent 2.1 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * flourish_child.childdummysubjectconsent 3 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
+      " * flourish_child.childdummysubjectconsent 4 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * flourish_facet.facetconsent 1 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * flourish_facet.motherchildconsent 1 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
       " * pre_flourish.preflourishcaregiverchildconsent 1 covering 2020-07-01 UTC to 2025-06-30 UTC\n",
@@ -93,7 +95,7 @@
       " Done loading Edc Lab.\n",
       "Loading Edc Navbar ...\n",
       " * checking for site navbars ...\n",
-      " * searching edc_consent           \r         * registered navbars 'navbars' from 'edc_consent'\n",
+      " * searching edc_consent           \r            * registered navbars 'navbars' from 'edc_consent'\n",
       " * registered navbars 'navbars' from 'edc_device'\n",
       " * registered navbars 'navbars' from 'edc_navbar'\n",
       " * registered navbars 'navbars' from 'edc_reference'\n",
@@ -114,7 +116,7 @@
       " * registered navbars 'navbars' from 'flourish_facet'\n",
       " Done loading Edc Navbar.             \n",
       " * checking for site prn_forms ...\n",
-      "Loading Edc Registration ...                   \n",
+      "Loading Edc Registration ...                    * searching edc_facility           \n",
       "  * using edc_registration.registeredsubject\n",
       " Done loading Edc Registration.\n",
       "Loading Edc Reference ...\n",
@@ -209,7 +211,7 @@
     "from flourish_caregiver.models import AntenatalEnrollment, CaregiverChildConsent\n",
     "from tqdm import tqdm\n",
     "\n",
-    "all_antenatal_objs=AntenatalEnrollment.objects.all()\n",
+    "all_antenatal_objs = AntenatalEnrollment.objects.all()\n",
     "\n",
     "for obj in tqdm(all_antenatal_objs):\n",
     "    try:\n",
@@ -219,8 +221,9 @@
     "    except CaregiverChildConsent.DoesNotExist:\n",
     "        pass\n",
     "    else:\n",
-    "        obj.child_subject_identifier = consent.subject_identifier\n",
-    "        obj.save_base(raw=True)"
+    "        if not consent.study_child_identifier:\n",
+    "            obj.child_subject_identifier = consent.subject_identifier\n",
+    "            obj.save_base(raw=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -257,8 +260,9 @@
     "    except CaregiverChildConsent.DoesNotExist:\n",
     "        pass\n",
     "    else:\n",
-    "        delivery.child_subject_identifier = consent.subject_identifier\n",
-    "        delivery.save_base(raw=True)"
+    "        if not consent.study_child_identifier:\n",
+    "            delivery.child_subject_identifier = consent.subject_identifier\n",
+    "            delivery.save_base(raw=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -271,15 +275,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 8090/8090 [01:36<00:00, 84.12it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "from flourish_caregiver.models import MaternalVisit, UltraSound\n",
+    "from tqdm import tqdm\n",
+    "from django.apps import apps as django_apps\n",
+    "\n",
+    "caregiver_visits = MaternalVisit.objects.all()\n",
+    "\n",
+    "for visit in tqdm(caregiver_visits):\n",
+    "    try:\n",
+    "        ultrasound = UltraSound.objects.get(\n",
+    "            maternal_visit=visit)\n",
+    "    except UltraSound.DoesNotExist:\n",
+    "        pass\n",
+    "    else:\n",
+    "        onschedule_model = getattr(\n",
+    "            visit.appointment.schedule, 'onschedule_model', None)\n",
+    "        onschedule_model_cls = django_apps.get_model(onschedule_model)\n",
+    "        onschedule_obj = onschedule_model_cls.objects.get(\n",
+    "            subject_identifier=visit.subject_identifier,\n",
+    "            schedule_name=visit.appointment.schedule_name)\n",
+    "        child_subject_identifier = getattr(onschedule_obj,\n",
+    "                                           'child_subject_identifier', None)\n",
+    "        ultrasound.child_subject_identifier = child_subject_identifier\n",
+    "        ultrasound.save_base(raw=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-30T14:01:47.905503Z",
+     "start_time": "2023-11-30T14:00:09.355542Z"
+    }
+   },
+   "id": "70045e5c709ea3c5"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "dir(ScreeningPregWomenInline)"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "70045e5c709ea3c5"
+   "id": "5858131814703504"
   }
  ],
  "metadata": {
