--- a/Notebooks/screenings_to_inline.ipynb
+++ b/Notebooks/screenings_to_inline.ipynb
@@ -5,11 +5,11 @@
    "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-10-31T05:59:20.744575Z",
      "start_time": "2023-10-31T05:58:56.992976Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
@@ -93,7 +93,8 @@
       " Done loading Edc Lab.\n",
       "Loading Edc Navbar ...\n",
       " * checking for site navbars ...\n",
-      " * searching edc_consent           \r         * registered navbars 'navbars' from 'edc_consent'\n",
+      " * searching edc_consent           \r",
+      "         * registered navbars 'navbars' from 'edc_consent'\n",
       " * registered navbars 'navbars' from 'edc_device'\n",
       " * registered navbars 'navbars' from 'edc_navbar'\n",
       " * registered navbars 'navbars' from 'edc_reference'\n",
@@ -230,13 +231,13 @@
     "    child_subject_identifier = None\n",
     "    try:\n",
     "        consent = CaregiverChildConsent.objects.filter(\n",
-    "            subject_consent__screening_identifier=screening.get('fields').get('screening_identifier')).latest(\n",
+    "            subject_consent__screening_identifier=screening.get('fields').get('screening_identifier'),\n",
+    "            study_child_identifier__isnull=True).latest(\n",
     "            'consent_datetime')\n",
     "    except CaregiverChildConsent.DoesNotExist:\n",
     "        pass\n",
     "    else:\n",
-    "        if consent and not consent.study_child_identifier:\n",
-    "            child_subject_identifier = consent.subject_identifier\n",
+    "        child_subject_identifier = consent.subject_identifier\n",
     "\n",
     "    options = {\n",
     "        'report_datetime': screening.get('fields').get('report_datetime'),\n",
@@ -263,17 +264,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7dc185f78e1f9261",
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7dc185f78e1f9261"
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -287,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.6.15"
   }
  },
  "nbformat": 4,
