Refactor the tuberculosis screening functionality
Enhanced the tuberculosis (TB) screening functionality by adding new methods and updating existing ones. The 'yes_no_u' choices to the TB screening mixin for caregiver model is added and 'required' attribute for TB screening and referral in child's visit schedule is changed. New test cases are added, and metadata rules relevant to TB screening and referral are also updated.

--- a/Notebooks/issue_7366.ipynb
+++ b/Notebooks/issue_7366.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-22T08:31:29.645221Z",
-     "start_time": "2024-01-22T08:31:21.077067Z"
+     "end_time": "2024-01-22T09:38:43.370753Z",
+     "start_time": "2024-01-22T09:38:32.210847Z"
     }
    },
    "outputs": [
@@ -199,28 +199,32 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(1, {'flourish_caregiver.OnScheduleCohortCSec': 1})"
+      "text/plain": "<QuerySet [<SubjectScheduleHistory: SubjectScheduleHistory object (03f2e63c-150e-4021-8784-1a687204a643)>]>"
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from edc_visit_schedule.models import SubjectScheduleHistory\n",
     "from flourish_caregiver.models import OnScheduleCohortCSec\n",
     "\n",
     "obj=OnScheduleCohortCSec.objects.filter(subject_identifier='C142-040990307-6', schedule_name='c_sec2_schedule1')\n",
-    "obj.delete()\n"
+    "\n",
+    "sub_history=SubjectScheduleHistory.objects.filter(subject_identifier='C142-040990307-6', schedule_name='c_sec2_schedule1')\n",
+    "sub_history.delete()\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-22T08:36:12.928656Z",
-     "start_time": "2024-01-22T08:36:12.662197Z"
+     "end_time": "2024-01-22T09:41:46.662597Z",
+     "start_time": "2024-01-22T09:41:46.650272Z"
     }
    },
    "id": "ed4e39ef861d9946",
-   "execution_count": 5
+   "execution_count": 7
   },
   {
    "cell_type": "code",
