feat(Notebooks): Add new notebook for data migration for #7381
Created a new Jupyter notebook that performs a data migration specific to ticket #7381. The notebook replaces the 'reason_child_not_tested' field in the InfantHIVTesting model with a many-to-many field for each unique instance. It also handles historical data updates.

--- a/Notebooks/#7381_data_migration.ipynb
+++ b/Notebooks/#7381_data_migration.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-16T05:51:53.931459Z",
-     "start_time": "2024-02-16T05:51:34.936709Z"
+     "end_time": "2024-02-15T08:58:54.650401Z",
+     "start_time": "2024-02-15T08:58:48.063920Z"
     }
    },
    "outputs": [
@@ -198,109 +198,40 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
-    "def read_json_file(file_path):\n",
-    "    with open(file_path, 'r') as json_file:\n",
-    "        data = json.load(json_file)\n",
-    "    return data"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-16T05:56:11.608723Z",
-     "start_time": "2024-02-16T05:56:11.593338Z"
-    }
-   },
-   "id": "a977e80e27beac06",
-   "execution_count": 2
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 265/265 [00:01<00:00, 264.01it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "39\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from docutils.parsers import null\n",
     "from edc_constants.constants import OTHER\n",
     "from tqdm import tqdm\n",
     "from flourish_child.models import ChildHIVNotTestedReason, InfantHIVTesting\n",
     "\n",
     "## TODO: At the time of update before applying migrations dump the data from the old table and then add the data on the variable all_infant_hiv_testing then run migrations and then run the below code to update the data\n",
-    "all_infant_hiv_testing = read_json_file('/Users/nimrodmunatsi/Downloads/infanthivtesting.json')\n",
-    "not_fould_count = 0\n",
+    "all_infant_hiv_testing=[]\n",
     "\n",
     "for infant_hiv_testing in tqdm(all_infant_hiv_testing):\n",
-    "    reason = infant_hiv_testing.get('fields').get('reason_child_not_tested')\n",
-    "    visit = infant_hiv_testing.get('fields').get('child_visit')\n",
-    "    reason_other = infant_hiv_testing.get('fields').get('reason_child_not_tested_other')\n",
-    "\n",
     "    try:\n",
-    "        live_obj=InfantHIVTesting.objects.get(\n",
-    "            child_visit__subject_identifier=visit[0], \n",
-    "            child_visit__visit_code=visit[3],\n",
-    "        )\n",
+    "        live_obj=InfantHIVTesting.objects.get(child_visit_id=infant_hiv_testing.child_visit_id)\n",
     "    except InfantHIVTesting.DoesNotExist:\n",
-    "        not_fould_count += 1\n",
     "        continue\n",
     "    else:\n",
-    "        reason_to_short_name = {\n",
-    "            'missed_visit': 'missed_visit',\n",
-    "            'hcw_decision': 'not_offered',\n",
-    "            'no_kits': 'no_test_kits',\n",
-    "            OTHER: OTHER,\n",
-    "            'no_apparent_reason': OTHER,\n",
-    "        }\n",
-    "\n",
-    "        if reason in reason_to_short_name:\n",
-    "            obj = ChildHIVNotTestedReason.objects.get(short_name=reason_to_short_name[reason])\n",
-    "            live_obj.reason_child_not_tested.add(obj)\n",
-    "        \n",
-    "        if reason == OTHER or reason == 'no_apparent_reason':\n",
-    "            live_obj.reason_child_not_tested_other = reason_other if reason_other else 'no_apparent_reason'\n",
-    "        live_obj.save_base(raw=True)\n",
-    "        \n",
-    "print(not_fould_count)\n",
+    "        if infant_hiv_testing.reason_child_not_tested == 'missed_visit':\n",
+    "            missed_visit = ChildHIVNotTestedReason.objects.get(short_name='missed_visit')\n",
+    "            live_obj.reason_child_not_tested.add(missed_visit)\n",
+    "        elif infant_hiv_testing.reason_child_not_tested == 'hcw_decision':\n",
+    "            hcw_decision = ChildHIVNotTestedReason.objects.get(short_name='not_offered')\n",
+    "            live_obj.reason_child_not_tested.add(hcw_decision)\n",
+    "        elif infant_hiv_testing.reason_child_not_tested == 'no_kits':\n",
+    "            no_kits = ChildHIVNotTestedReason.objects.get(short_name='no_test_kits')\n",
+    "            live_obj.reason_child_not_tested.add(no_kits)\n",
+    "        elif infant_hiv_testing.reason_child_not_tested == OTHER or infant_hiv_testing.reason_child_not_tested == 'no_apparent_reason':\n",
+    "            other = ChildHIVNotTestedReason.objects.get(short_name=OTHER)\n",
+    "            live_obj.reason_child_not_tested.add(other)\n",
+    "            live_obj.reason_child_not_tested_other = infant_hiv_testing.reason_child_not_tested_other if infant_hiv_testing.reason_child_not_tested_other else 'no_apparent_reason'\n",
+    "        live_obj.save()\n",
     "        "
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-16T06:10:49.459024Z",
-     "start_time": "2024-02-16T06:10:48.438843Z"
-    }
-   },
-   "id": "c5dcd311ab591282",
-   "execution_count": 5
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
     "collapsed": false
    },
-   "id": "cd1001996d3fe3db"
+   "id": "c5dcd311ab591282",
+   "execution_count": null
   }
  ],
  "metadata": {
