--- a/Notebooks/#7419_infant_test_crf_data_migration.ipynb
+++ b/Notebooks/#7419_infant_test_crf_data_migration.ipynb
@@ -368,23 +368,26 @@
     "    '/Users/nimrodmunatsi/Downloads/infanthivtesting.json')\n",
     "\n",
     "for infant_hiv_test_obj in tqdm(infant_hiv_test_objs):\n",
-    "    if infant_hiv_test_obj.get('fields').get('child_tested_for_hiv') == NO or infant_hiv_test_obj.get('fields').get('child_tested_for_hiv') == 'Dont_know':\n",
+    "    if infant_hiv_test_obj.get('fields').get(\n",
+    "            'child_tested_for_hiv') == NO or infant_hiv_test_obj.get('fields').get(\n",
+    "            'child_tested_for_hiv') == 'Dont_know':\n",
     "        continue\n",
     "    visit = infant_hiv_test_obj.get('fields').get('child_visit')\n",
     "    subject_identifier = visit[0]\n",
     "    child_consent = CaregiverChildConsent.objects.filter(\n",
     "        subject_identifier=subject_identifier).latest('consent_datetime')\n",
-    "    if not (child_consent.child_dob and infant_hiv_test_obj.get('fields').get('child_test_date')):\n",
+    "    if not (child_consent.child_dob and infant_hiv_test_obj.get('fields').get(\n",
+    "            'child_test_date')):\n",
     "        continue\n",
-    "        \n",
-    "    child_test_date = infant_hiv_test_obj.get('fields').get('child_test_date')  \n",
+    "\n",
+    "    child_test_date = infant_hiv_test_obj.get('fields').get('child_test_date')\n",
     "    child_test_date = datetime.strptime(child_test_date, \"%Y-%m-%d\")\n",
     "    report_datetime = infant_hiv_test_obj.get('fields').get('report_datetime')\n",
     "\n",
     "    report_datetime = datetime.strptime(report_datetime, \"%Y-%m-%dT%H:%M:%SZ\")\n",
     "    report_datetime = report_datetime.replace(tzinfo=pytz.UTC)\n",
-    "    age_at_test = age(child_consent.child_dob,child_test_date)\n",
-    "    \n",
+    "    age_at_test = age(child_consent.child_dob, child_test_date)\n",
+    "\n",
     "    try:\n",
     "        child_visit = ChildVisit.objects.get(visit_code=visit[3],\n",
     "                                             subject_identifier=subject_identifier)\n",
@@ -397,17 +400,24 @@
     "        options = {\n",
     "            'child_visit': child_visit,\n",
     "            'report_datetime': report_datetime,\n",
-    "            'child_tested_for_hiv': infant_hiv_test_obj.get('fields').get('child_test_date'),\n",
-    "            'child_test_date_estimated': infant_hiv_test_obj.get('fields').get('child_test_date_estimated'),\n",
+    "            'child_tested_for_hiv': infant_hiv_test_obj.get('fields').get(\n",
+    "                'child_test_date'),\n",
+    "            'child_test_date_estimated': infant_hiv_test_obj.get('fields').get(\n",
+    "                'child_test_date_estimated'),\n",
     "            'results_received': infant_hiv_test_obj.get('fields').get('results_received'),\n",
-    "            'recall_result_date': infant_hiv_test_obj.get('fields').get('recall_result_date'),\n",
+    "            'recall_result_date': infant_hiv_test_obj.get('fields').get(\n",
+    "                'recall_result_date'),\n",
     "            'received_date': infant_hiv_test_obj.get('fields').get('received_date'),\n",
-    "            'result_date_estimated': infant_hiv_test_obj.get('fields').get('result_date_estimated'),\n",
+    "            'result_date_estimated': infant_hiv_test_obj.get('fields').get(\n",
+    "                'result_date_estimated'),\n",
     "            'hiv_test_result': infant_hiv_test_obj.get('fields').get('hiv_test_result'),\n",
-    "            'additional_comments': infant_hiv_test_obj.get('fields').get('additional_comments'),\n",
+    "            'additional_comments': infant_hiv_test_obj.get('fields').get(\n",
+    "                'additional_comments'),\n",
     "        }\n",
     "        #test done at 6-8 weeks\n",
-    "        if age_at_test.years == 0 and age_at_test.months == 2:\n",
+    "        # test age in weeks\n",
+    "        age_in_weeks = (age_at_test.years * 52.143) + (age_at_test.months * 4.348)\n",
+    "        if 6 <= age_in_weeks <= 8:\n",
     "            test_obj = InfantHIVTestingAge6To8Weeks.objects.create(\n",
     "                **options\n",
     "            )\n",
